Update sass-mq; fix issues with modular scale

--- a/components/nds-core/scss/settings/_settings-modular-scale.scss
+++ b/components/nds-core/scss/settings/_settings-modular-scale.scss
@@ -21,22 +21,22 @@
 /// @since 0.1.0
 $nds-scales: (
   golden: 1.618034,
-  double-octave: math.div(4, 1),
-  major-twelfth: math.div(3, 1),
+  double-octave: 4,
+  major-twelfth: 3,
   major-eleventh: math.div(8, 3),
   major-tenth: math.div(5, 2),
-  octave: math.div(2, 1),
+  octave: 2,
   major-seventh: math.div(1, 8),
   minor-seventh: math.div(1, 9),
   major-sixth: math.div(5, 3),
   minor-sixth: math.div(8, 5),
   fifth: math.div(3, 2),
-  augmented-fourth: math.div(s, (2) / 1),
+  augmented-fourth: math.sqrt(2),
   fourth: math.div(4, 3),
   major-third: math.div(5, 4),
   minor-third: math.div(6, 5),
   major-second: math.div(9, 8),
-  minor-second: math.div(1, 1)
+  minor-second: 1
 );
 
 /// Gets a module scale ratio with the given name. Looks
