Fix warnings caused by deprecated use of division in SASS (#254)
* Publish

 - @nice-digital/design-system@1.6.2
 - @nice-digital/nds-a-z-list@0.2.1
 - @nice-digital/nds-alphabet@0.3.1
 - @nice-digital/nds-checkbox@1.3.0
 - @nice-digital/nds-column-list@1.3.0
 - dev-app@1.4.2
 - @nice-digital/design-system-documentation@1.6.2
 - storybook@1.6.2

* Fix deprecation warnings caused by division of values

* Replace node-sass with sass; run sass migrator on deprecated division operators

* Update sass-mq; fix issues with modular scale

Co-authored-by: Chris Barker <chris.barker@nice.org.uk>

--- a/components/nds-core/scss/settings/_settings-modular-scale.scss
+++ b/components/nds-core/scss/settings/_settings-modular-scale.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 /// Modular scale values
 /// @link http://www.modularscale.com/
 /// @prop {Number} golden [1.618034]
@@ -19,22 +21,22 @@
 /// @since 0.1.0
 $nds-scales: (
   golden: 1.618034,
-  double-octave: 4 / 1,
-  major-twelfth: 3 / 1,
-  major-eleventh: 8 / 3,
-  major-tenth: 5 / 2,
-  octave: 2 / 1,
-  major-seventh: 15 / 8,
-  minor-seventh: 16 / 9,
-  major-sixth: 5 / 3,
-  minor-sixth: 8 / 5,
-  fifth: 3 / 2,
-  augmented-fourth: sqrt(2) / 1,
-  fourth: 4 / 3,
-  major-third: 5 / 4,
-  minor-third: 6 / 5,
-  major-second: 9 / 8,
-  minor-second: 16 / 15
+  double-octave: 4,
+  major-twelfth: 3,
+  major-eleventh: math.div(8, 3),
+  major-tenth: math.div(5, 2),
+  octave: 2,
+  major-seventh: math.div(1, 8),
+  minor-seventh: math.div(1, 9),
+  major-sixth: math.div(5, 3),
+  minor-sixth: math.div(8, 5),
+  fifth: math.div(3, 2),
+  augmented-fourth: math.sqrt(2),
+  fourth: math.div(4, 3),
+  major-third: math.div(5, 4),
+  minor-third: math.div(6, 5),
+  major-second: math.div(9, 8),
+  minor-second: 1
 );
 
 /// Gets a module scale ratio with the given name. Looks
