--- a/packages/storybook/.storybook/stories.scss
+++ b/packages/storybook/.storybook/stories.scss
@@ -1,3 +1,10 @@
 $nice-icons-base-path: '/';
 
 @import '../../../components/design-system/scss/base.scss';
+
+.storybook-swatch {
+  border: 1px solid #dedede;
+  display: inline-block;
+  height: 30px;
+  width: 60px;
+}
