--- a/components/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/components/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -187,36 +187,36 @@ $nds-colour-beta: #bd5826;
 $nds-colour-live: #578137;
 
 /// Error text and border colour
-/// @since 0.2.0
-$nds-colour-error: #ae0e1e;
+/// @since 1.7.0
+$nds-colour-error: #b50f23;
 
 /// Error background colour
-/// @since 0.2.0
-$nds-colour-error-background: #eac3c3;
+/// @since 1.7.0
+$nds-colour-error-background: #f9eced;
 
 /// Caution text and border colour
-/// @since 0.2.0
-$nds-colour-caution: #835f24;
+/// @since 1.7.0
+$nds-colour-caution: #dc8a07;
 
 /// Caution background colour
-/// @since 0.2.0
-$nds-colour-caution-background: #ffdfa4;
+/// @since 1.7.0
+$nds-colour-caution-background: #fbf7f1;
 
 /// Info text and border colour
-/// @since 0.2.0
-$nds-colour-info: #497b94;
+/// @since 1.7.0
+$nds-colour-info: #3479d0;
 
 /// Info background colour
-/// @since 0.2.0
-$nds-colour-info-background: #e6faff;
+/// @since 1.7.0
+$nds-colour-info-background: #eff4fc;
 
 /// Success text and border colour
-/// @since 0.2.0
-$nds-colour-success: #3b8458;
+/// @since 1.7.0
+$nds-colour-success: #68c103;
 
 /// Success background colour
-/// @since 0.2.0
-$nds-colour-success-background: #eff7eb;
+/// @since 1.7.0
+$nds-colour-success-background: #f3faeb;
 
 /// <mark> tag highlighter colour
 /// @since 1.2.4
@@ -245,37 +245,3 @@ $nds-colour-hero-background: $nds-colour-nice-teal-2;
 /// Colour for the border in the hero component
 /// @since 0.5.2
 $nds-colour-hero-border: $nds-colour-nice-teal-3;
-
-// ALERTS
-
-/// Border colour for "info" alerts
-/// @since 1.6.4
-$nds-alert-info-border: #3479d0;
-
-/// Background colour for "info" alerts
-/// @since 1.6.4
-$nds-alert-info-background: #eff4fc;
-
-/// Border colour for "caution" alerts
-/// @since 1.6.4
-$nds-alert-caution-border: #dc8a07;
-
-/// Background colour for "caution" alerts
-/// @since 1.6.4
-$nds-alert-caution-background: #fbf7f1;
-
-/// Border colour for "danger" alerts
-/// @since 1.6.4
-$nds-alert-danger-border: #b50f23;
-
-/// Background colour for "danger" alerts
-/// @since 1.6.4
-$nds-alert-danger-background: #f9eced;
-
-/// Border colour for "success" alerts
-/// @since 1.6.4
-$nds-alert-success-border: #68c103;
-
-/// Background colour for "success" alerts
-/// @since 1.6.4
-$nds-alert-success-background: #f3faeb;
