--- a/components/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/components/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -187,36 +187,36 @@ $nds-colour-beta: #bd5826;
 $nds-colour-live: #578137;
 
 /// Error text and border colour
-/// @since 0.2.0
-$nds-colour-error: #ae0e1e;
+/// @since 1.7.0
+$nds-colour-error: #b50f23;
 
 /// Error background colour
-/// @since 0.2.0
-$nds-colour-error-background: #eac3c3;
+/// @since 1.7.0
+$nds-colour-error-background: #f9eced;
 
 /// Caution text and border colour
-/// @since 0.2.0
-$nds-colour-caution: #835f24;
+/// @since 1.7.0
+$nds-colour-caution: #dc8a07;
 
 /// Caution background colour
-/// @since 0.2.0
-$nds-colour-caution-background: #ffdfa4;
+/// @since 1.7.0
+$nds-colour-caution-background: #fbf7f1;
 
 /// Info text and border colour
-/// @since 0.2.0
-$nds-colour-info: #497b94;
+/// @since 1.7.0
+$nds-colour-info: #3479d0;
 
 /// Info background colour
-/// @since 0.2.0
-$nds-colour-info-background: #e6faff;
+/// @since 1.7.0
+$nds-colour-info-background: #eff4fc;
 
 /// Success text and border colour
-/// @since 0.2.0
-$nds-colour-success: #3b8458;
+/// @since 1.7.0
+$nds-colour-success: #68c103;
 
 /// Success background colour
-/// @since 0.2.0
-$nds-colour-success-background: #eff7eb;
+/// @since 1.7.0
+$nds-colour-success-background: #f3faeb;
 
 /// <mark> tag highlighter colour
 /// @since 1.2.4
