NDS-219 Update default link hover colour

--- a/components/nds-core/scss/settings/_settings-colours-semantic.scss
+++ b/components/nds-core/scss/settings/_settings-colours-semantic.scss
@@ -48,7 +48,7 @@ $nds-colour-link: #005ea5;
 
 /// Link hover colour
 /// @since 0.2.0
-$nds-colour-link-hover: #2e8aca;
+$nds-colour-link-hover: #003761;
 
 /// Link visited colour
 /// @since 0.2.0
