NDS-220 Increase right/left padding on column-list component to improve spacing on BNF/C medical devices page

--- a/components/nds-column-list/scss/column-list.scss
+++ b/components/nds-column-list/scss/column-list.scss
@@ -10,9 +10,8 @@
     border: 1px solid $nds-colour-border;
 
     li {
-      padding: rem(
-        $nds-spacing-small
-      ); // Make room for the anchor focus outline
+      // Make room for the anchor focus outline and breathing space around items
+      padding: rem($nds-spacing-small) rem($nds-spacing-medium);
     }
 
     a {
