NDS-280 Add no cache attribute

--- a/components/icons/templates/scss.hbs
+++ b/components/icons/templates/scss.hbs
@@ -15,6 +15,9 @@ It generates:
 /* sass-lint:disable-all */
 /* stylelint-disable */
 
+// Cache busting random querystring
+${{ name }}-no-cache: random(999999999);
+
 /// Base path for loading font files
 /// Override this in your application if your path differs.
 /// E.g. if you want to replace it off a CDN you could change this to 'http://cdn.com/fonts/'
