NDS-257 Add global colours and typography updates

--- a/components/nds-core/scss/settings/_settings-typography.scss
+++ b/components/nds-core/scss/settings/_settings-typography.scss
@@ -102,13 +102,13 @@ $nds-font-sizes: (
     fs: 18,
     lh: 24,
     mb: $nds-spacing-medium,
-    mt: $nds-spacing-medium
+    mt: $nds-spacing-large
   ),
   2: (
     fs: 20,
     lh: 28,
     mb: $nds-spacing-medium,
-    mt: $nds-spacing-medium
+    mt: $nds-spacing-large
   ),
   3: (
     fs: 28,
