--- a/components/nds-core/scss/settings/_settings-colour-global-tokens.scss
+++ b/components/nds-core/scss/settings/_settings-colour-global-tokens.scss
@@ -28,14 +28,17 @@ $global-black-tint-3: #bfbfbf;
 
 // Custom palette
 $global-custom-grey-1: #adadad;
+$global-custom-grey-2: #d6d6d6;
+$global-custom-grey-3: #666;
 $global-custom-blue-1: #005ea5;
 $global-custom-blue-2: #003761;
 $global-custom-blue-3: #3479d0;
 $global-custom-blue-3-tint: #eff4fc;
-$global-custom-purple: #4c2c92;
-$global-custom-red: #b50f23;
-$global-custom-red-tint: #f9eced;
-$global-custom-orange: #dc8a07;
-$global-custom-orange-tint: #fbf7f1;
-$global-custom-green: #68c103;
-$global-custom-green-tint: #f3faeb;
+$global-custom-purple-1: #4c2c92;
+$global-custom-red-1: #b50f23;
+$global-custom-red-1-tint: #f9eced;
+$global-custom-orange-1: #dc8a07;
+$global-custom-orange-1-tint: #fbf7f1;
+$global-custom-green-1: #68c103;
+$global-custom-green-1-tint: #f3faeb;
+$global-custom-yellow-shade: #d6ba32;
