--- a/components/nds-filters/scss/filter-input.scss
+++ b/components/nds-filters/scss/filter-input.scss
@@ -9,7 +9,8 @@
 
   // Wrapper for the input and button
   &__controls {
-    border: utils.rem(spacing.$x-small) solid colours.$nice-grey-2;
+    border: utils.rem(spacing.$x-small) solid
+      colours.$filter-input-controls-border;
     padding: utils.rem(spacing.$small);
 
     label {
