--- a/components/nds-form-group/scss/form-group.scss
+++ b/components/nds-form-group/scss/form-group.scss
@@ -21,7 +21,7 @@
   }
 
   &__hint {
-    color: colours.$nice-dark-grey;
+    color: colours.$form-group-hint;
     margin-top: utils.rem(spacing.$x-small);
   }
 
