--- a/components/nds-stacked-nav/scss/stacked-nav.scss
+++ b/components/nds-stacked-nav/scss/stacked-nav.scss
@@ -15,7 +15,7 @@
 /// Usually full width on mobile and 1/3 on wider screens.
 .stacked-nav {
   @include visibility.hide-print;
-  background: colours.$nice-white;
+  background: colours.$stacked-nav-background;
   border: 1px solid colours.$border;
   margin: utils.em(0 0 spacing.$large);
 
@@ -41,7 +41,7 @@
     color: colours.$text;
     display: block;
     & :active {
-      color: colours.$nice-white;
+      color: colours.$stacked-nav-active-hint;
     }
   }
 
@@ -70,7 +70,7 @@
 
     &[aria-current='true'],
     &[aria-current='page'] {
-      background: colours.$nice-grey-3;
+      background: colours.$stacked-nav-current-link;
       font-weight: 600;
 
       &:before {
@@ -86,14 +86,14 @@
     }
 
     &:hover {
-      background: colours.$nice-grey-2;
+      background: colours.$stacked-nav-link-hover;
     }
 
     &:active {
-      background: colours.$icons;
+      background: colours.$stacked-nav-current-link-background;
       color: colours.$link-inverse;
       span {
-        color: colours.$nice-white;
+        color: colours.$stacked-nav-current-link-active;
       }
     }
   }
