--- a/packages/storybook/.storybook/stories.scss
+++ b/packages/storybook/.storybook/stories.scss
@@ -24,7 +24,7 @@ $nice-icons-base-path: '/';
 }
 
 .storybook-block {
-  background: colours.$nice-purple;
+  background: colours.$btn-primary;
   display: inline-block;
   height: 20px;
   min-width: 1px;
