--- a/components/nds-button/scss/button.scss
+++ b/components/nds-button/scss/button.scss
@@ -8,7 +8,7 @@
 @use '@nice-digital/nds-core/scss/typography';
 @use '@nice-digital/nds-core/scss/utils';
 
-$button-shadow-colour: rgba(0, 0, 0, 0.2);
+$button-shadow-colour: rgba(0, 0, 0, 20%);
 $button-border-radius: utils.em(3px);
 
 /// Button
