--- a/components/nds-panel/scss/panel.scss
+++ b/components/nds-panel/scss/panel.scss
@@ -8,36 +8,12 @@
 @use '@nice-digital/nds-core/scss/typography';
 @use '@nice-digital/nds-core/scss/utils';
 
-// Default (light) panel background colour
-/// @since 1.0.0
-$colour-panel-default-background: colours.$nice-grey-3;
-
-// Default (light) panel border colour
-/// @since 0.5.2
-$colour-panel-default-border: colours.$nice-grey-2;
-
-// Impact panel background colour
-/// @since 1.0.0
-$colour-panel-impact-background: colours.$nice-blue-3;
-
-// Impact panel border colour
-/// @since 1.0.0
-$colour-panel-impact-border: colours.$nice-blue-2;
-
-// Primary panel background colour
-/// @since 1.0.0
-$colour-panel-primary-background: colours.$nice-white;
-
-// Primary panel border colour
-/// @since 1.0.0
-$colour-panel-primary-border: colours.$nice-ice-teal;
-
 /// A panel is a container for visually separating content.
 /// Often used within a sidebar.
 /// @since 0.1.0
 .panel {
-  background: $colour-panel-default-background;
-  border: 1px solid $colour-panel-default-border; // To distinguish panel from off-grey body background
+  background: colours.$panel-default-background;
+  border: 1px solid colours.$panel-default-border; // To distinguish panel from off-grey body background
   margin: utils.em(0 0 spacing.$large);
   padding: utils.em(spacing.$medium);
 
@@ -58,8 +34,8 @@ $colour-panel-primary-border: colours.$nice-ice-teal;
 .panel--impact {
   @include typography.links-inverse;
   @include focus.inverse-button-focus;
-  background: $colour-panel-impact-background;
-  border: 1px solid $colour-panel-impact-border;
+  background: colours.$panel-impact-background;
+  border: 1px solid colours.$panel-impact-border;
   color: colours.$text-inverse;
 }
 
@@ -70,25 +46,25 @@ $colour-panel-primary-border: colours.$nice-ice-teal;
 /// @require .panel
 /// @since 1.0.0
 .panel--primary {
-  background: $colour-panel-primary-background;
-  border: 3px solid $colour-panel-primary-border;
+  background: colours.$panel-primary-background;
+  border: 3px solid colours.$panel-primary-border;
 }
 
 .panel--inverse {
   @include typography.links-inverse;
   @include focus.inverse-button-focus;
-  background: colours.$nice-teal;
+  background: colours.$panel-inverse-background;
   color: colours.$text-inverse;
 }
 
 .panel--impact-alt {
   @include typography.links-inverse;
   @include focus.inverse-button-focus;
-  background: colours.$nice-teal;
+  background: colours.$panel-impact-alt-background-1;
   background: linear-gradient(
     333deg,
-    colours.$nice-teal-3 0%,
-    colours.$nice-teal-1 100%
+    colours.$panel-impact-alt-background-1 0%,
+    colours.$panel-impact-alt-background-2 100%
   );
   color: colours.$text-inverse;
 }
