--- a/packages/storybook/stories/grid.stories.scss
+++ b/packages/storybook/stories/grid.stories.scss
@@ -1,8 +1,8 @@
 @use '@nice-digital/nds-core/scss/colours';
 
 .grid-example-item {
-  background: colours.$nice-grey-3;
-  border: 0.25em solid colours.$nice-grey-1;
+  background: colours.$fill-page-background;
+  border: 0.25em solid colours.$border;
   margin-bottom: 0.5em;
   padding: 0.5em;
   text-align: center;
